# api-support-debug-lab

./: Cargo.toml  LICENSE  NOTICE  README.md  _typos.toml  deny.toml  release.toml
benches/: diagnose.rs
colab/: api_debug_lab.ipynb  api_debug_lab_latest.ipynb
docs/: benchmarks.md  confidence_model.md  coverage.md  escalation_template.md  escalation_template_no_repro.md  escalation_template_p0.md  mutation_report.md
docs/adr/: 0001-rule-based-not-learned.md  0002-per-line-json-autodetect.md  0003-static-rule-slice.md  README.md
fixtures/: cases.schema.json
fixtures/cases/auth_missing/: case.json
fixtures/cases/bad_json_payload/: case.json
fixtures/cases/config_dns_error/: case.json
fixtures/cases/idempotency_collision/: case.json
fixtures/cases/rate_limited/: case.json
fixtures/cases/timeout_retry/: case.json
fixtures/cases/timeout_retry_jsonl/: case.json
fixtures/cases/timeout_retry_midnight_rollover/: case.json
fixtures/cases/timeout_retry_partial_outage/: case.json
src/: cases.rs  embedded.rs  evidence.rs  lib.rs  main.rs  report.rs  rules.rs
tests/: calibration.rs  calibration_regression.rs  diagnose_cli.rs  latency_budget.rs  oracle.rs  properties.rs  rules.rs  schema.rs  snapshots.rs
tests/snapshots/: snapshots__auth_missing__human.snap  snapshots__auth_missing__json.snap  snapshots__bad_json_payload__human.snap  snapshots__bad_json_payload__json.snap  snapshots__config_dns_error__human.snap  snapshots__config_dns_error__json.snap  snapshots__rate_limited__human.snap  snapshots__rate_limited__json.snap  snapshots__timeout_retry__human.snap  snapshots__timeout_retry__json.snap  snapshots__webhook_signature_invalid__human.snap  snapshots__webhook_signature_invalid__json.snap  snapshots__webhook_signature_invalid_stale__human.snap  snapshots__webhook_signature_invalid_stale__json.snap
(+28 files in other folders)
